# m2server

./: .gitignore  CMakeLists.txt  README.md
cmake/macros/: CheckPlatform.cmake  ConfigureBoost.cmake
cmake/platform/freebsd/: settings.cmake
cmake/platform/unix/: settings.cmake
src/db/: AuctionManager.cpp  AuctionManager.h  BlockCountry.cpp  CMakeLists.txt  Cache.cpp  Cache.h  ClientManager.cpp  ClientManager.h  ClientManagerBoot.cpp  ClientManagerEventFlag.cpp  ClientManagerGuild.cpp  ClientManagerHorseName.cpp  ClientManagerLogin.cpp  ClientManagerParty.cpp  ClientManagerPlayer.cpp  Config.cpp  CsvReader.cpp  CsvReader.h  DBManager.h  GuildManager.cpp  GuildManager.h  HB.cpp  HB.h  ItemAwardManager.cpp  ItemAwardManager.h  LoginData.cpp  Main.cpp  Marriage.cpp  Marriage.h  Monarch.cpp  MoneyLog.cpp  MoneyLog.h  Peer.h  PeerBase.cpp  PrivManager.cpp  PrivManager.h  ProtoReader.cpp  ProtoReader.h  QID.h  grid.cpp
src/game/: CMakeLists.txt  DragonLair.cpp  DragonSoul.cpp  DragonSoul.h  MarkConvert.cpp  MarkImage.cpp  MarkImage.h  MarkManager.cpp  MarkManager.h  OXEvent.cpp  OXEvent.h  SpeedServer.cpp  SpeedServer.h  TrafficProfiler.h  affect.h  ani.cpp  banword.cpp  belt_inventory_helper.h  blend_item.cpp  block_country.cpp  buff_on_attributes.cpp  buff_on_attributes.h  building.cpp  building.h  config.cpp  config.h  constants.cpp  constants.h  cube.cpp  cube.h  db.cpp  db.h  desc.cpp  desc.h  desc_client.cpp  desc_manager.cpp  dev_log.cpp  dev_log.h  dragon_soul_table.cpp  dungeon.cpp  (+80 more)
src/game/Arena/: BattleArena.cpp  arena.cpp  arena.h
src/game/Auction/: auction_manager.cpp  auction_manager.h
src/game/Battle/: battle.cpp  battle.h
src/game/Castle/: castle.cpp  castle.h
src/game/Commands/: cmd.cpp  cmd.h  cmd_emotion.cpp  cmd_general.cpp  cmd_general.cpp.new  cmd_gm.cpp  cmd_oxevent.cpp
src/game/Entities/: entity.cpp  entity.h  entity_view.cpp
src/game/Entities/Character/: char.cpp  char.h  char_affect.cpp  char_battle.cpp  char_change_empire.cpp  char_dragonsoul.cpp  char_horse.cpp  char_item.cpp  char_item.cpp.new  char_manager.cpp  char_manager.h  char_quickslot.cpp  char_resist.cpp  char_skill.cpp  char_state.cpp
src/game/Entities/Horse/: horse_rider.cpp  horse_rider.h  horsename_manager.cpp
src/game/Entities/Pet/: PetSystem.cpp  PetSystem.h
src/game/Guilds/: guild.cpp  guild.h  guild_manager.cpp  guild_manager.h  guild_war.cpp
src/game/Items/: item.cpp  item.h  item_addon.cpp  item_attribute.cpp  item_manager.cpp  item_manager.h  item_manager_read_tables.cpp
src/game/Logs/: log.cpp  log.h
src/game/LuaEngine/: questlua.cpp  questlua_affect.cpp  questlua_dungeon.cpp  questlua_global.cpp  questlua_guild.cpp  questlua_horse.cpp  questlua_item.cpp  questlua_marriage.cpp  questlua_monarch.cpp  questlua_npc.cpp  questlua_party.cpp  questlua_pc.cpp  questlua_pet.cpp  questlua_quest.cpp  questlua_target.cpp
src/game/Movement/: motion.cpp  motion.h
src/game/Quests/: questevent.cpp  questmanager.cpp  questmanager.h  questnpc.cpp  questnpc.h  questpc.cpp  questpc.h
src/game/Server/Protocol/: cipher.cpp  packet.h  packet_info.cpp  packet_info.h
src/libthecore/: buffer.cpp  buffer.h  hangul.cpp.new  hangul.h  heart.cpp  heart.h  kstbl.cpp  kstbl.h  log.cpp  log.h  main.cpp  main.h  signal.cpp  socket.cpp  socket.h  stdafx.h  tea.cpp  utils.cpp  utils.h  xgetopt.cpp
src/shared/common/: VnumHelper.h  attribute.cc  attribute.h  auction_table.h  building.h  item_length.h  length.h  service.h  stl.h  tables.h
src/shared/libmysql/6.0.2/win32/mysql/: my_time.h
src/shared/libpoly/: main.cc
src/shared/libsql/: AsyncSQL.cpp  AsyncSQL.h
